# outerwilds-solar-system

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/app/: app.h  camera.h  orbit.h  render.h
shaders/: basic.frag  basic.vert
src/: camera.c  main.c  orbit.c  render.c
